# C-Image-Filter

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
autom4te.cache/: output.1  output.2  requests  traces.1  traces.2
include/app/: AppCommon.h  ArgumentParser.h  ImageProcessor.h  ImageReader.h  ImageWriter.h
include/application/: ApplicationCommon.h  ArgumentParser.h  ImageProcessor.h  ImageReader.h  ImageType.h  ImageWriter.h
include/engine/: EngineCommon.h  FilterProcessor.h  Filters.h
include/filters/: Blue.h  Brightness.h  Cyan.h  FlipVertical.h  Grayscale.h  Green.h  Magenta.h  Monochrome.h  Multiplier.h  Negative.h  None.h  Red.h  RotateClockwise.h  RotateCounterClockwise.h  Saturation.h  Sepia.h  Yellow.h
include/filters/convolution/: BoxBlur.h  Convolute.h  Sharpen.h
include/filters/edition/: FlipHorizontal.h
include/filters/multiplication/: Blue.h  Cyan.h  Green.h  Magenta.h  Monochrome.h  Multiplier.h  Negative.h  Red.h  Sepia.h  Yellow.h
src/: main.c
src/app/: ArgumentParser.c  ImageProcessor.c  ImageReader.c
src/application/: ArgumentParser.c  ImageProcessor.c  ImageReader.c  ImageType.c  ImageWriter.c
src/engine/: FilterProcessor.c  Filters.c
src/filters/: Blue.c  Brightness.c  Cyan.c  FlipHorizontal.c  FlipVertical.c  Grayscale.c  Green.c  Magenta.c  Monochrome.c  Multiplier.c  Negative.c  None.c  Red.c  RotateClockwise.c  RotateCounterClockwise.c  Saturation.c  Sepia.c  Yellow.c
src/filters/convolution/: BoxBlur.c  Convolute.c  Sharpen.c
src/filters/edition/: FlipVertical.c
src/filters/multiplication/: Blue.c  Green.c  Monochrome.c  Negative.c  Sepia.c  Yellow.c
